# fortran-tensor-library

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yml
cmake/: Fortran_flags.cmake  UnitTests.cmake
cmake/math/: ConfigMath.cmake  MathLibs.cmake  MathLibsFunctions.cmake
src/: contractor_class.F90  ftensor_program.F90  kinds.F90  parameters.F90  sorter_class.F90  string_class.F90  string_utilities.F90  tensor_class.F90
tests/: contractor_class_test.pf  create_tensor.pf  find_substrings.pf  is_substring_in_string_test.pf  string_class_test.pf  tensor_class_test.pf
